[package]
name = "dtn-dwd-backend"
version = "0.1.0"
authors = ["Lars Baumgaertner <1264131+gh0st42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.7.3"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tinyfiledialogs = "3.8.3"
bp7 = "0.9.2"
dtn7-plus = "0.5.1"
attohttpc = "0.17.0"

[build-dependencies]
inline_assets = "0.4.1"
