[package]
name = "client"
version = "0.1.0"
authors = ["Lars Baumgaertner <1264131+gh0st42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.6.3"
serde_json = "1.0.56"
serde = { version="1.0.114", features = ["derive"] }
tinyfiledialogs = "3.3.9"
bp7 = "0.6.2"
dtn7-plus = "0.1.5"
ws = "0.9.1"
anyhow = "1.0.31"
url = "2.1.1"
json = "0.12.4"

[build-dependencies]
inline_assets = "0.4.1"
