[package]
name = "dtn-dwd-client"
version = "0.1.0"
authors = ["Lars Baumgaertner <1264131+gh0st42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.7.3"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tinyfiledialogs = "3.8.3"
bp7 = "0.10.5"
dtn7-plus = "0.7.0"
ws = "0.9.2"
anyhow = "1.0.44"
url = "2.2.2"
json = "0.12.4"

[build-dependencies]
inline_assets = "0.4.1"
